2009-10-27  Dafydd Crosby <dafydd.crosby@gmail.com>
	* printer/Oki-B6300.xml: Printer uses PJL, added pxlmono
	driver

	* printer/HP-LaserJet_P4014.xml,
	  printer/HP-LaserJet_P4015.xml: New printer database entries

2009-10-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Kyocera-CS-C2525E_KPDL.xml,
	  printer/Kyocera-CS-C3225E_KPDL.xml,
	  printer/Kyocera-CS-C3232E_KPDL.xml,
	  printer/Kyocera-CS-C4035E_KPDL.xml,
	  printer/Kyocera-CS_250ci_KPDL.xml,
	  printer/Kyocera-CS_300ci_KPDL.xml,
	  printer/Kyocera-CS_400ci_KPDL.xml,
	  printer/Kyocera-CS_500ci_KPDL.xml,
	  printer/Kyocera-FS-C5100DN_KPDL.xml,
	  printer/Kyocera-FS-C5200DN_KPDL.xml,
	  printer/Kyocera-FS-C5300DN_KPDL.xml,
	  printer/Kyocera-FS-C5350DN_KPDL.xml,
	  printer/Kyocera-FS-C5400DN_KPDL.xml,
	  printer/Kyocera-FS-C8100DNplus_KPDL.xml,
	  printer/Kyocera-KM-C2525E_KPDL.xml,
	  printer/Kyocera-KM-C3225E_KPDL.xml,
	  printer/Kyocera-KM-C3232E_KPDL.xml,
	  printer/Kyocera-KM-C4035E_KPDL.xml,
	  printer/Kyocera-TASKalfa_250ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_300ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_400ci_KPDL.xml,
	  printer/Kyocera-TASKalfa_500ci_KPDL.xml: New printer database
	  entries for the new Kyocera printers.

	* PPD/Kyocera/de/Kyocera_CS-C2525E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C3225E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C3232E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS-C4035E_de.ppd,
	  PPD/Kyocera/de/Kyocera_CS_250ci.ppd,
	  PPD/Kyocera/de/Kyocera_CS_300ci.ppd,
	  PPD/Kyocera/de/Kyocera_CS_400ci.ppd,
	  PPD/Kyocera/de/Kyocera_CS_500ci.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5100DN.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5200DN.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5300DN.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5350DN.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5400DN.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C8100DN_de.ppd,
	  PPD/Kyocera/de/Kyocera_FS_C8100DNP.ppd,
	  PPD/Kyocera/de/Kyocera_KM-C2525E_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-C3225E_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-C3232E_de.ppd,