@@ -35,14 +35,15 @@ tegoryid=232&amp;modelid=8740</url>
           You have to adjust the resolution values in the ppd to the
           correct values: 150x150, 300x300, 600x600 and
           1200x1200. Nevertheless it seems to work in 600dpi only, for
-          other values the scaling is not correct.&lt;p&gt;
-
-      Consumables/Refills: Refill: BCI-24 ink tank $7 black, $18.50 color&lt;p&gt;
+          other values the scaling is not correct.
         </en>
       </comments>
     </driver>
   </drivers>
   <!--not "unverified"--><!--no "contrib_url"-->
   <comments>
+    <en>
+      Consumables/Refills: Refill: BCI-24 ink tank $7 black, $18.50 color&lt;p&gt;
+    </en>
   </comments>
 </printer>
