@@ -1,6 +1,13 @@
+2009-11-06  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* db/source/printer/Canon-i450.xml: Correct comments. Consumables
+	  info has to go into the printer's comment not into the comment
+	  of the printer/driver combo.
+
 2009-10-27  Dafydd Crosby <dafydd.crosby@gmail.com>
+
 	* printer/Oki-B6300.xml: Printer uses PJL, added pxlmono
-	driver
+	  driver
 
 	* printer/HP-LaserJet_P4014.xml,
 	  printer/HP-LaserJet_P4015.xml: New printer database entries
